@@ -4,7 +4,8 @@ Changelog
 1.1.3 (unreleased)
 ------------------
 
-- Nothing changed yet.
+- Display the shopitems image if the item has a image field.
+  [Julian Infanger]
 
 
 1.1.2 (2012-09-27)
